--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.2.16",
+    "@storybook/addon-info": "^3.2.16",
     "@storybook/react": "^3.2.16",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
