--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-persist": "^4.10.1",
+    "redux-saga": "^0.16.0",
     "uid": "^0.0.2"
   },
   "scripts": {
